--- a/src/styles/Model.css
+++ b/src/styles/Model.css
@@ -5,3 +5,14 @@
     top: 0;
     left: 0;
 }
+
+.title-text {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 100%;
+    color: #fff;
+    font-size: 1.5em;
+}
